--- a/crates/bevy_gltf/Cargo.toml
+++ b/crates/bevy_gltf/Cargo.toml
@@ -33,6 +33,7 @@ bevy_scene = { path = "../bevy_scene", version = "0.12.0", features = [
 bevy_transform = { path = "../bevy_transform", version = "0.12.0" }
 bevy_tasks = { path = "../bevy_tasks", version = "0.12.0" }
 bevy_utils = { path = "../bevy_utils", version = "0.12.0" }
+bevy_gltf_macros = { path = "macros", version = "0.12.0" }
 
 # other
 gltf = { version = "1.3.0", default-features = false, features = [
